<resources>
    <string name="new_version_uploadbtn">立即更新</string>
    <string name="new_version_cancelbtn">下次更新</string>
    <string name="new_version_title">更新提醒</string>
    <string name="saving">保存图片…</string>
    <string name="wait">请稍后…</string>
    <string name="error_pick_image">图片无效</string>
    <string name="done">保存</string>
    <string name="cancel">取消</string>
    <string name="wallpaper">正在设置壁纸，请稍候…</string>
    <string name="multiface_crop_help">轻点一张脸开始裁剪。</string>
    <string name="network_not_connected">网络连接失败，请检查网络设置</string>
    <string name="http_status_code_error">网络异常</string>
    <string name="http_exception_error">网络异常，请求超时</string>
    <string name="io_exception_error">文件流异常</string>
    <string name="socket_exception_error">网络异常，读取数据超时</string>
    <string name="app_run_code_error">应用程序运行时异常</string>
    <string name="app_download_error">下载失败</string>
    <string name="app_download_complete">下载完成，点击安装。</string>
    <string name="app_download_start">开始下载</string>
    <string name="app_find_new">发现新版本</string>
    <string name="app_current_is_new">当前版本已是最新版本，版本号是：%s</string>
    <string name="app_show_message" formatted="false">当前有新版本，版本号是：%1$s，已安装版本是：%2$s</string>
    <string name="app_find_new_title">发现新版本: %s</string>
    <string name="app_message">修复bug</string>
    <string name="app_ok">立即更新</string>
    <string name="app_cancel">以后再说</string>
    <string name="app_quit">退出</string>
    <string name="activity_remote_service_binding">AppDemo4</string>
    <string name="remote_call_failed">Failure calling remote service</string>
    <string name="partnerHint">partner</string>
    <string name="sellerHint">seller</string>
    <string name="out_trade_noHint">out_trade_no</string>
    <string name="subjectHint">subject</string>
    <string name="bodyHint">body</string>
    <string name="total_feeHint">total_fee</string>
    <string name="notify_urlHint">notify_url</string>
    <string name="charsetHint">charset</string>
    <string name="signTypeHint">signType</string>
    <string name="confirm_install_hint">安装提示</string>
    <string name="confirm_install">"为保证您的交易安全，需要您安装支付宝安全支付服务，才能进行付款。

点击确定，立即安装。"</string>
    <string name="Ensure">确定</string>
    <string name="Cancel">取消</string>
    <string name="check_sign_failed">您的订单信息已被非法篡改。</string>
    <string name="list_end_load_text">正在加载数据…</string>
    <string name="dialog_loading_text">加载中…</string>
    <string name="no_data">暂无数据</string>
    <string name="start_time">开始时间：</string>
    <string name="stop_time">停止时间：</string>
    <string name="add">添加</string>
    <string name="sdcard_error">无法载入sdcard</string>
    <string name="photo_take">拍照</string>
    <string name="photo_loc">本地</string>
    <string name="photo_cancle">取消</string>
    <string name="exit_out_success">退出成功</string>
    <string name="btn_update_my_info">编辑个人资料</string>
    <string name="bmi_height">身高:</string>
    <string name="bmi_height_unit">单位:厘米</string>
    <string name="bmi_weight">体重:</string>
    <string name="bmi_weight_unit">单位:千克</string>
    <string name="bmi_compute">点击测试BMI</string>
    <string name="bmi_weight_not_null">无效的体重</string>
    <string name="bmi_height_not_null">无效的身高</string>
    <string name="smoke_year">抽烟时间:</string>
    <string name="smoke_unit">单位:年</string>
    <string name="each_count">每天数量:</string>
    <string name="each_unit">单位:支</string>
    <string name="smoke_test">点击测试危害</string>
    <string name="sympotom_notice">若症状程度较重、反复或持续不缓解、甚至加剧，请及时就医！</string>
    <string name="yigantrue">(+)</string>
    <string name="yiganfalse">(–)</string>
    <string name="year">年:</string>
    <string name="month">月:</string>
    <string name="day">日:</string>
    <string name="name1">乙肝表面抗原(HBsAg)</string>
    <string name="name2">乙肝表面抗体(HBsAb)</string>
    <string name="name3">乙肝E抗原(HBeAg)</string>
    <string name="name4">乙肝E抗体(HBeAb)</string>
    <string name="name5">乙肝核心抗体(HBcAb)</string>
    <string name="btn_user_hit">帐号必须以字母开头</string>
    <string name="hello">请输入关键字</string>
    <string name="hint_question">请输入您的性别、年龄，并详细描述您的病情以便与我们进一步确诊！</string>
    <string name="app_name">亚心在线</string>
    <string name="dlg_info">提示</string>
    <string name="dlg_error">提示</string>
    <string name="dlg_settings">设置</string>
    <string name="dlg_delete_info">是否删除该条记录？</string>
    <string name="dlg_delete_alarm">是否删除该闹铃？</string>
    <string name="dlg_redo">重试</string>
    <string name="dlg_back">返回</string>
    <string name="dlg_network_error">出现网络错误，请检查网络连接设置是否正确。</string>
    <string name="bt_fp_title1">院内导航</string>
    <string name="bt_fp_title2">智能导诊</string>
    <string name="bt_fp_title3">挂号</string>
    <string name="bt_fp_title31">确认</string>
    <string name="bt_fp_title4">住院</string>
    <string name="bt_fp_title5">体检</string>
    <string name="bt_fp_title6">检查预约</string>
    <string name="bt_fp_title7">健康百科</string>
    <string name="bt_fp_title8">健康资讯</string>
    <string name="bt_fp_title9">医生在线</string>
    <string name="bt_fp_title10">你有新的预约信息</string>
    <string name="bt_fp_title11">我的档案</string>
    <string name="settings_age">年龄</string>
    <string name="settings_sex">性别</string>
    <string name="sex_male">男</string>
    <string name="sex_female">女</string>
    <string name="list_symptom_checker">症状自检</string>
    <string name="btn_body">身体</string>
    <string name="btn_list">列表</string>
    <string name="shengming">该测试结果仅供参考，可能产生误诊、漏诊，不能替代医生和其他医务人员建议。</string>
    <string name="error_age_out_of_bound">请输入0~110之间的整数</string>
    <string name="title_symptom_list">已选择的症状</string>
    <string name="title_symptom_question">问题</string>
    <string name="btn_answers">回答</string>
    <string name="btn_continue">继续</string>
    <string name="btn_next_question">下一个问题</string>
    <string name="btn_check_possible_diseas">查看可能的疾病</string>
    <string name="btn_delete">删除</string>
    <string name="system_user_info_setting">个人设置</string>
    <string name="btn_ok">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_refuse">拒绝</string>
    <string name="error_search_content_empty">搜索内容不能为空</string>
    <string name="list_more">更多…</string>
    <string name="search_keyword">请输入关键字</string>
    <string name="dlg_disease_empty_postfix">的疾病信息。</string>
    <string name="dlg_floor_empty_postfix">的楼层信息。</string>
    <string name="dlg_symptom_empty_postfix">的症状信息。</string>
    <string name="dlg_drug_empty_postfix">的药物信息。</string>
    <string name="list_conditions">疾病</string>
    <string name="title_disease_category">疾病分类</string>
    <string name="title_introduction">概述</string>
    <string name="title_other">其他</string>
    <string name="title_reason_description">病因描述</string>
    <string name="title_symptom_description">症状描述</string>
    <string name="title_checking">检查</string>
    <string name="title_diagnosis">诊断与鉴别</string>
    <string name="title_prevention">预防</string>
    <string name="title_concurrent">并发症</string>
    <string name="title_treatment">治疗</string>
    <string name="list_community">健康资讯</string>
    <string name="title_first_aid_category">急救分类</string>
    <string name="hint_search_first_aid_category">请输入急救分类</string>
    <string name="hint_search_first_aid">请输入急救信息</string>
    <string name="dlg_first_aid_empty_postfix">的急救信息。</string>
    <string name="title_full_check_category">检验单分类</string>
    <string name="btn_item_description">项目介绍</string>
    <string name="btn_item_reference">正常参考值</string>
    <string name="btn_item_value">临床意义</string>
    <string name="dlg_full_check_empty_postfix">的检验单信息。</string>
    <string name="msg_add_to_commne_success">添加评论成功，我们会对你的内容进行审核，1秒后跳转回医院</string>
    <string name="msg_add_to_favorite_success">成功添加至收藏</string>
    <string name="btn_doctors">医生</string>
    <string name="btn_departments">科室</string>
    <string name="btn_add_comment">评论</string>
    <string name="btn_open_comment">评论收藏</string>
    <string name="btn_close_comment">收起</string>
    <string name="btn_address">地址：</string>
    <string name="btn_tel">电话：</string>
    <string name="btn_traffic">交通：</string>
    <string name="btn_website">网址：</string>
    <string name="btn_hospital_level">医院等级：</string>
    <string name="btn_hospital_description">医院介绍：</string>
    <string name="btn_specialty">特色科室：</string>
    <string name="btn_favorite">收藏</string>
    <string name="btn_mon">星期一</string>
    <string name="btn_tue">星期二</string>
    <string name="btn_wen">星期三</string>
    <string name="btn_thu">星期四</string>
    <string name="btn_fri">星期五</string>
    <string name="btn_sat">星期六</string>
    <string name="btn_sun">星期日</string>
    <string name="btn_am">上午</string>
    <string name="btn_pm">下午</string>
    <string name="btn_night">晚上</string>
    <string name="msg_add_to_question_success">问题提交成功，2秒后跳转查看跟你提问相关的问题列表</string>
    <string name="msg_add_to_favorite_have">你已经收藏过该内容</string>
    <string name="title_choose_tel">请选择您想要拨打的电话号码：</string>
    <string name="btn_doctor_search">医生检索</string>
    <string name="dlg_doctor_empty">医生姓名不能为空。</string>
    <string name="btn_suppose">认为</string>
    <string name="btn_sex">性别：</string>
    <string name="btn_position">职称：</string>
    <string name="btn_especial_skill">擅长：</string>
    <string name="btn_week_time">门诊时间：</string>
    <string name="btn_doctor_week_time">门诊排班</string>
    <string name="btn_place">门诊地点：</string>
    <string name="btn_register_fee">挂号费：</string>
    <string name="btn_doctor_description">医生介绍：</string>
    <string name="btn_bed">床位：</string>
    <string name="btn_remark">简介：</string>
    <string name="btn_facult_address">地址：</string>
    <string name="btn_post_code">邮编：</string>
    <string name="btn_hospital_facult_doctor">医生列表(点击查看科室介绍)</string>
    <string name="btn_hospital_facult">科室列表</string>
    <string name="btn_hospital_doctor">医生列表</string>
    <string name="btn_hospital">医院收藏</string>
    <string name="btn_doctor">医生收藏</string>
    <string name="btn_fullcheck">检验单收藏</string>
    <string name="dlg_doctor_empty_postfix">的医生信息。</string>
    <string name="title_near_hospital">附近医院</string>
    <string name="title_near_drug_store">附近药店</string>
    <string name="title_hospital_map">医院地图导航</string>
    <string name="title_drug_store_map">地图导航</string>
    <string name="dlg_empty_prefix">没有关于</string>
    <string name="dlg_drug_store_near_empty_postfix">没有周边的药店信息。</string>
    <string name="dlg_hospital__near_empty_postfix">没有周边的医院信息。</string>
    <string name="bai_du_map_search_error">抱歉，未找到结果:</string>
    <string name="menu_exit">退出</string>
    <string name="menu_home">首页</string>
    <string name="menu_about">关于</string>
    <string name="up">↑</string>
    <string name="down">↓</string>
    <string name="path">下载路径</string>
    <string name="button">开始</string>
    <string name="success">下载完成</string>
    <string name="error">下载失败!!!</string>
    <string name="sdcarderror">SDCard不存在或者写保护</string>
    <string name="msg_default_status">镜头范围内进行扫描。</string>
    <string name="msg_default_time">时间</string>
    <string name="msg_result">类型</string>
    <string name="button_ok">ok</string>
    <string name="format">格式</string>
    <string name="msg_camera_framework_bug">相机故障</string>
    <string name="tab_1">医生简介</string>
    <string name="tab_2">在线问诊</string>
    <string name="tab_3">电话咨询</string>
    <string name="online_1">进行中</string>
    <string name="online_2">待评价</string>
    <string name="online_3">已结束</string>
    <string name="phone_1">已预约</string>
    <string name="phone_2">待评价</string>
    <string name="phone_3">已结束</string>
    <string name="alipay_paying">正在支付</string>
    <string name="alipay_success">支付成功.</string>
    <string name="alipay_false">支付失败</string>
    <string name="alipay_vision">正在检测安全支付服务版本</string>
    <string name="layout_temp39">科室名称</string>
    <string name="layout_temp66">医生职称</string>
    <string name="layout_temp70">【简介】</string>
    <string name="layout_temp76">【科室类型】</string>
    <string name="layout_temp77">【可预约时间段】</string>
</resources>